--- a/CABASUS/Main.storyboard
+++ b/CABASUS/Main.storyboard
@@ -46,7 +46,7 @@
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fwU-19-4KL">
                                 <rect key="frame" x="67" y="454" width="258" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" red="0.96470588235294119" green="0.50196078431372548" blue="0.098039215686274508" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="backgroundColor" red="0.79607843137254897" green="0.11764705882352941" blue="0.11764705882352941" alpha="1" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <state key="normal" title="CREATE ACCOUNT">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -119,7 +119,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ZBE-rX-MHE" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="716" y="71"/>
+            <point key="canvasLocation" x="578" y="-92"/>
         </scene>
         <!--Sesion View Controller-->
         <scene sceneID="SOQ-LZ-fI7">
@@ -137,7 +137,7 @@
                                 <rect key="frame" x="140" y="35" width="91" height="34"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="28"/>
-                                <color key="textColor" red="0.90196078431372551" green="0.49019607843137253" blue="0.12941176470588234" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="textColor" red="0.79607843137254897" green="0.11764705882352941" blue="0.11764705882352941" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Email" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Be-5z-J5x">
@@ -178,7 +178,7 @@
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="U03-Xi-f3a">
                                 <rect key="frame" x="162" y="318" width="109" height="31"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" red="0.90196078430000004" green="0.49019607840000001" blue="0.12941176469999999" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="backgroundColor" red="0.79607843137254897" green="0.11764705882352941" blue="0.11764705882352941" alpha="1" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                 <state key="normal" title="LOG IN">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -195,6 +195,11 @@
                                     <segue destination="xhS-l0-QaQ" kind="presentation" id="2Zb-DF-wkS"/>
                                 </connections>
                             </button>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="9gg-iz-j3g">
+                                <rect key="frame" x="169" y="449" width="37" height="37"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="color" red="0.79607843140000001" green="0.1176470588" blue="0.1176470588" alpha="1" colorSpace="calibratedRGB"/>
+                            </activityIndicatorView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </view>
@@ -205,6 +210,7 @@
                         <outlet property="lbl_login" destination="My6-BI-u1k" id="8lZ-PX-MOb"/>
                         <outlet property="lbl_password" destination="bNE-5H-mbR" id="FUd-VB-d3b"/>
                         <outlet property="lblemail" destination="6Be-5z-J5x" id="hdF-wm-u9G"/>
+                        <outlet property="progreso" destination="9gg-iz-j3g" id="HEl-f3-xqe"/>
                         <outlet property="txt_email" destination="hzt-oD-9rx" id="lwG-Q3-gwr"/>
                         <outlet property="txt_password" destination="pzZ-Me-rhQ" id="Wh7-UR-1YX"/>
                     </connections>
@@ -288,7 +294,7 @@
                                     <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ge6-py-B0N">
                                         <rect key="frame" x="124" y="480" width="50" height="36"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <color key="backgroundColor" red="0.90196078430000004" green="0.49019607840000001" blue="0.12941176469999999" alpha="1" colorSpace="calibratedRGB"/>
+                                        <color key="backgroundColor" red="0.79607843137254897" green="0.11764705882352941" blue="0.11764705882352941" alpha="1" colorSpace="calibratedRGB"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                         <state key="normal" title="Done">
                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -305,6 +311,11 @@
                                             <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </state>
                                     </button>
+                                    <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="lUj-HR-Xd3">
+                                        <rect key="frame" x="170" y="375" width="37" height="37"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <color key="color" red="0.79607843137254897" green="0.11764705882352941" blue="0.11764705882352941" alpha="1" colorSpace="calibratedRGB"/>
+                                    </activityIndicatorView>
                                 </subviews>
                             </scrollView>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wjb-NF-Q9X">
@@ -330,6 +341,7 @@
                         <outlet property="lbl_email" destination="cRU-Ap-RHL" id="br8-b8-ACi"/>
                         <outlet property="lbl_pw" destination="72m-5n-OQ7" id="B6j-Ju-Oqm"/>
                         <outlet property="lbl_username" destination="A2Z-2G-L5f" id="WZ4-jG-xjD"/>
+                        <outlet property="progreso" destination="lUj-HR-Xd3" id="tJ2-Y4-iOy"/>
                         <outlet property="scroll_register" destination="v3f-Ob-kKE" id="F86-eR-JNr"/>
                         <outlet property="txt_dob" destination="brI-9G-J6f" id="NlK-Kt-hlg"/>
                         <outlet property="txt_email" destination="wLy-mV-lJG" id="IgF-3Q-XAP"/>
@@ -346,6 +358,6 @@
         <image name="cabasuslogo.png" width="625" height="209"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="SsL-eK-Xtj"/>
+        <segue reference="2Zb-DF-wkS"/>
     </inferredMetricsTieBreakers>
 </document>
